WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50680
WebTouchEvent::isTouchEventType() does not take into account the type TouchCancel
https://bugs.webkit.org/show_bug.cgi?id=50680
Summary
WebTouchEvent::isTouchEventType() does not take into account the type TouchCa...
Benjamin Poulain
Reported
2010-12-08 04:38:48 PST
WebTouchEvent::isTouchEventType() does not take into account the type TouchCancel. This makes the constructor of the class fail in debug due to ASSERT(isTouchEventType(type));.
Attachments
Patch
(1.16 KB, patch)
2010-12-08 04:50 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2010-12-08 04:50:18 PST
Created
attachment 75891
[details]
Patch
Andreas Kling
Comment 2
2010-12-08 04:52:37 PST
Comment on
attachment 75891
[details]
Patch Good catch, r=me
WebKit Commit Bot
Comment 3
2010-12-08 17:10:30 PST
The commit-queue encountered the following flaky tests while processing
attachment 75891
[details]
: fast/workers/storage/use-same-database-in-page-and-workers.html transitions/change-values-during-transition.html Please file bugs against the tests. These tests were authored by
dumi@chromium.org
,
jparent@google.com
,
mihaip@chromium.org
, and
pol@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2010-12-08 18:16:00 PST
Comment on
attachment 75891
[details]
Patch Clearing flags on attachment: 75891 Committed
r73581
: <
http://trac.webkit.org/changeset/73581
>
WebKit Commit Bot
Comment 5
2010-12-08 18:16:05 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug