2010-12-08  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Andreas Kling.

        WebTouchEvent::isTouchEventType() does not take into account the type TouchCancel
        https://bugs.webkit.org/show_bug.cgi?id=50680

        Add the missing type check to WebTouchEvent::isTouchEventType().

        * Shared/WebTouchEvent.cpp:
        (WebKit::WebTouchEvent::isTouchEventType):

Canonical link: https://commits.webkit.org/63990@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73581 268f45cc-cd09-0410-ab3c-d52691b4dbfc